# opencv_cpp_hello_world

./: CMakeLists.txt  README.md
scripts/: build_with_apt.sh  build_with_brew.sh  build_with_msys2.sh  build_with_vcpkg.sh  run.sh  setup_apt.sh  setup_brew.sh  setup_msys2.sh  setup_vcpkg.sh
src/: main.cpp
